// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeOpenApiTableActionOptions should normalize complex open-api table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "body": {
    "id": "uuid",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": "update",
  "inHeader": false,
  "kind": "open-api",
  "name": "update",
  "nestModule": null,
  "openApi": null,
  "operationId": "UserController_update",
  "overwrite": false,
  "parameters": {
    "force": "true",
  },
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;

exports[`NormalizeOpenApiTableActionOptions should normalize minimal open-api table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "body": false,
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": null,
  "cssClass": null,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "icon": null,
  "inHeader": false,
  "kind": "open-api",
  "name": "api-call",
  "nestModule": null,
  "openApi": null,
  "operationId": "myOp",
  "overwrite": false,
  "parameters": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;
